修复bug,增加了头像上传api
