# models/userfrom.go
@@ -9,7 +9,6 @@ import (
 	"time"
 )
 
-// 注册
 type User struct {
 	Indently      string `json:"indently" `
 	Username      string `json:"username"  `
@@ -18,6 +17,7 @@ type User struct {
 	Register_time string `json:"register_time" `
 	Email         string `json:"email" `
 	Account       string `json:"account"`
+	Headpicture   string `json:"headpicture"`
 }
 
 // 登录
@@ -29,10 +29,6 @@ type LoginForm struct {
 
 func (u User) User() string {
 	return "User"
-}
-
-func (f LoginForm) UserForm() string {
-	return " "
 }
 
 // 查询用户是否存在
@@ -48,7 +44,7 @@ func Getidently(username, password string) ([]User, error) {
 
 // 插入数据
 func InsetuserLoginForm(Register LoginForm, account string) (sql.Result, error) {
-	r, err := db.DB.Exec("insert into user(indently,username,password,use_status,register_time ,email,account)values(?,?,?,?,?,?,?)", utility.Uuid(), Register.Username, utility.Createmd5(Register.Password), 0, time.Now().Format("2006--01--02 15:03:05"), Register.Email, account)
+	r, err := db.DB.Exec("insert into user(indently,username,password,use_status,register_time ,email,account,headpicture)values(?,?,?,?,?,?,?,?)", utility.Uuid(), Register.Username, utility.Createmd5(Register.Password), 0, time.Now().Format("2006--01--02 15:03:05"), Register.Email, account, "")
 	if err != nil {
 		log.Println("注册出错:", err)
 		return nil, err
@@ -77,4 +73,13 @@ func GetUserByaccount(account string) (*User, error) {
 		return nil, err
 	}
 	return &use, nil
+}
+
+// 设置头像
+func SetHeadPicture(url, indently string) error {
+	_, err := db.DB.Exec("update user set headpicture=? where indently=?", url, indently)
+	if err != nil {
+		return err
+	}
+	return nil
 }
